--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: "Disintegr8tion"
-author: "Disintegr8te"
+title: "disintegr8tion"
+author: "disintegr8te"
 description: "Living an Infosec Live in an MS-Corporate World.." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
